--- a/Galactic Guidebook/Base.lproj/Main.storyboard
+++ b/Galactic Guidebook/Base.lproj/Main.storyboard
@@ -89,38 +89,53 @@
                                 <rect key="frame" x="0.0" y="134" width="414" height="679"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="7f8-Ah-4Rs">
-                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="itemSize" width="190" height="190"/>
+                                    <size key="estimatedItemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="collectionCell" id="8bW-N2-LVf" customClass="GalacticCollectionViewCell" customModule="Galactic_Guidebook" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="190" height="190"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="W1q-E9-T1f">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="190" height="190"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="0Bh-bS-icE">
-                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="0Bh-bS-icE">
+                                                    <rect key="frame" x="0.0" y="0.0" width="190" height="190"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9rd-6i-tre">
-                                                            <rect key="frame" x="0.0" y="0.0" width="50" height="29.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="190" height="169.5"/>
                                                         </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XMd-DN-c6g">
-                                                            <rect key="frame" x="4" y="29.5" width="42" height="20.5"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XMd-DN-c6g">
+                                                            <rect key="frame" x="0.0" y="169.5" width="190" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="XMd-DN-c6g" firstAttribute="leading" secondItem="0Bh-bS-icE" secondAttribute="leading" id="Jg6-gy-OeJ"/>
+                                                        <constraint firstItem="9rd-6i-tre" firstAttribute="leading" secondItem="0Bh-bS-icE" secondAttribute="leading" id="MIA-t5-wpD"/>
+                                                        <constraint firstAttribute="bottom" secondItem="XMd-DN-c6g" secondAttribute="bottom" id="Xkm-KT-zQ6"/>
+                                                        <constraint firstItem="XMd-DN-c6g" firstAttribute="top" secondItem="9rd-6i-tre" secondAttribute="bottom" id="dVj-Ri-bX6"/>
+                                                        <constraint firstItem="9rd-6i-tre" firstAttribute="top" secondItem="0Bh-bS-icE" secondAttribute="top" id="ePY-Y7-2RW"/>
+                                                        <constraint firstAttribute="trailing" secondItem="XMd-DN-c6g" secondAttribute="trailing" id="uAu-Cq-NgZ"/>
+                                                        <constraint firstItem="XMd-DN-c6g" firstAttribute="top" secondItem="9rd-6i-tre" secondAttribute="bottom" id="y2q-rF-GH3"/>
+                                                        <constraint firstAttribute="trailing" secondItem="9rd-6i-tre" secondAttribute="trailing" id="zro-l9-iXh"/>
+                                                    </constraints>
                                                 </stackView>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="0Bh-bS-icE" firstAttribute="leading" secondItem="W1q-E9-T1f" secondAttribute="leading" id="2gX-To-qzt"/>
                                                 <constraint firstItem="0Bh-bS-icE" firstAttribute="top" secondItem="W1q-E9-T1f" secondAttribute="top" id="KtO-IG-9eM"/>
+                                                <constraint firstAttribute="trailing" secondItem="0Bh-bS-icE" secondAttribute="trailing" id="NC1-TK-yYs"/>
                                                 <constraint firstAttribute="bottom" secondItem="0Bh-bS-icE" secondAttribute="bottom" id="Os6-TF-eAh"/>
+                                                <constraint firstItem="0Bh-bS-icE" firstAttribute="top" secondItem="W1q-E9-T1f" secondAttribute="top" id="osc-qy-u4e"/>
+                                                <constraint firstItem="0Bh-bS-icE" firstAttribute="leading" secondItem="W1q-E9-T1f" secondAttribute="leading" id="sK0-ll-wgT"/>
+                                                <constraint firstAttribute="bottom" secondItem="0Bh-bS-icE" secondAttribute="bottom" id="su7-7t-7wq"/>
                                                 <constraint firstAttribute="trailing" secondItem="0Bh-bS-icE" secondAttribute="trailing" id="u48-g9-KUD"/>
                                             </constraints>
                                         </collectionViewCellContentView>
