--- a/Galactic Guidebook/DetailViewController.storyboard
+++ b/Galactic Guidebook/DetailViewController.storyboard
@@ -21,10 +21,10 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ISm-EY-h7Z">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="968"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="space" translatesAutoresizingMaskIntoConstraints="NO" id="WkO-Xo-29X">
-                                                <rect key="frame" x="-19" y="-29" width="453" height="357"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="darkspace" translatesAutoresizingMaskIntoConstraints="NO" id="WkO-Xo-29X">
+                                                <rect key="frame" x="-19" y="-29" width="453" height="327"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="357" id="4PT-t4-81g"/>
+                                                    <constraint firstAttribute="height" constant="327" id="4PT-t4-81g"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="planet name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iQp-Sv-nFX">
@@ -183,10 +183,10 @@
                                                     <action selector="onLinkPressed:" destination="CVq-OE-4RA" eventType="touchUpInside" id="coG-zT-uwB"/>
                                                 </connections>
                                             </button>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mars2" translatesAutoresizingMaskIntoConstraints="NO" id="Cca-qO-KDX">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mercury" translatesAutoresizingMaskIntoConstraints="NO" id="Cca-qO-KDX">
                                                 <rect key="frame" x="49" y="57" width="317" height="315"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="315" id="YpZ-Cb-FjK"/>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="315" id="YpZ-Cb-FjK"/>
                                                 </constraints>
                                             </imageView>
                                         </subviews>
@@ -203,7 +203,7 @@
                                             <constraint firstItem="3Ou-ad-tP7" firstAttribute="leading" secondItem="ISm-EY-h7Z" secondAttribute="leading" constant="20" id="FcN-Hd-RwT"/>
                                             <constraint firstItem="iQp-Sv-nFX" firstAttribute="top" secondItem="Cca-qO-KDX" secondAttribute="bottom" constant="8" id="Gcl-zx-ckm"/>
                                             <constraint firstItem="cqg-V8-ZgK" firstAttribute="leading" secondItem="ISm-EY-h7Z" secondAttribute="leading" constant="20" id="Jxi-DY-Lna"/>
-                                            <constraint firstItem="iQp-Sv-nFX" firstAttribute="top" secondItem="WkO-Xo-29X" secondAttribute="bottom" constant="52" id="Kvq-S6-sYp"/>
+                                            <constraint firstItem="iQp-Sv-nFX" firstAttribute="top" secondItem="WkO-Xo-29X" secondAttribute="bottom" constant="82" id="Kvq-S6-sYp"/>
                                             <constraint firstItem="LFC-Yj-s6E" firstAttribute="leading" secondItem="ISm-EY-h7Z" secondAttribute="leading" constant="20" id="KyT-MA-gbA"/>
                                             <constraint firstItem="WkO-Xo-29X" firstAttribute="top" secondItem="ISm-EY-h7Z" secondAttribute="top" constant="-29" id="NWY-NV-dd4"/>
                                             <constraint firstAttribute="trailing" secondItem="HNy-wr-eir" secondAttribute="trailing" constant="20" id="V8Z-N9-ace"/>
@@ -263,11 +263,11 @@
         </scene>
     </scenes>
     <resources>
+        <image name="darkspace" width="1920" height="1080"/>
         <image name="icons8-comet-50-2" width="50" height="50"/>
         <image name="icons8-planet-50-2" width="50" height="50"/>
         <image name="icons8-space-shuttle-50-2" width="50" height="50"/>
         <image name="icons8-telescope-50-2" width="50" height="50"/>
-        <image name="mars2" width="600" height="600"/>
-        <image name="space" width="960" height="640"/>
+        <image name="mercury" width="700" height="700"/>
     </resources>
 </document>
